Add input & button

--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,13 @@
-button {
+#getTablesButton {
+	height: 30px;
+	width: 150px;
+}
+
+.filter-area {
+	width: 200px;
+}
+
+/* button {
 	height: 30px;
 	width: 30px;
 	outline: none;
@@ -10,4 +19,4 @@ button {
 button.current {
 	box-shadow: 0 0 0 2px white,
 				0 0 0 4px black;
-}
+} */
