--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,20 @@
 	width: 200px;
 }
 
+input {
+	vertical-align: middle;
+	margin-top: -3px;
+	margin-bottom: 0px;
+}
+
+.tm-tips {
+	font-size: 4px;
+	color: gray;
+}
+
+.tm-info {
+	font-size: 10px;
+}
 /* button {
 	height: 30px;
 	width: 30px;
